--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/swatch/amelia.css">
     <!-- endbuild -->
   </head>
   <body ng-app="m1ch3lBizApp">
@@ -34,7 +35,7 @@
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-47804611-1');
        ga('send', 'pageview');
     </script>
 
